alignment fixings

--- a/style.css
+++ b/style.css
@@ -16,7 +16,9 @@ h5 {
     font-size: xx-large;
 }
 
-.box {
+div.centered {
+    top: 50%;
+    left: 50%;
     text-align: center;
     width: 320px;
     height: 50px;
